--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -71,21 +71,225 @@
 
 <p class="transcript-link">
   <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="fatmata-song-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+[voice] at some point
+you gotta decide 
+for yourself
+who you gon’ be
+can’t let nobody
+make that decision
+for you
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+even though I couldn’t see
+past what was going on
+I kept going
 
-    <p>...</p>
-  </div>
+this is hard for me
+but my mother taught me
+to use my voice
+even when it shakes
+
+to be proud of who I am
+& to live unapologetically
+
+that journey is not linear
+
+& I know that words
+hold no volumes
+unless spoken with conviction
+
+my mom’s from Cape Verde
+& my dad’s from Sierra Leone
+Cape Verde is where I was born
+I grew up in Jersey City
+
+I was under DACA
+
+because you know I am
+all of those things
+at the same time
+
+I pray to paint stars
+on the insides of your eyelids
+so you’d never have
+another nightmare
+
+the art of gathering
+
+I hope when it comes time 
+to say goodbye
+your mom has a harder time
+than I do
+
+we were just looking
+for answers
+to the questions
+you were too afraid
+to ask
+
+identity & gender & sexuality
+are not cut dry
+like perforated kitchen towels
+there is no black & white
+because the sky is light blue
+& sometimes pink
+& orange & gray & purple
+
+nature doesn’t give a care
+because she knows that
+change & diversity
+are beautiful &
+
+the first caterpillar
+to have turned into 
+a butterfly must have
+been like holy shit guys!
+
+even though I couldn’t see
+past what was going on
+I kept going
+
+this is hard for me
+but my mother taught me
+to use my voice
+even when it shakes
+
+to be proud of who I am
+& to live unapologetically
+
+that journey is not linear
+
+& I know that words
+hold no volumes
+unless spoken with conviction
+
+when I wrote that poem
+right after that 
+I went to my first Pride
+that summer
+I went to my first Pride
+with my then girlfriend
+and um, I thought about the poem
+& how much this issue
+like meant to me
+
+& if I’m sick I’m going to start 
+calling in queer to school
+“hello, this is G,
+how’s Fatmata doing?”
+
+“oh she’s still gay, 
+she can’t stop thinking
+about boobs again”
+
+part of like my healing process
+just embracing the grittier
+parts of ourselves
+
+& maybe humans
+are the only creatures
+that have an issue
+with homosexuality
+because we have such
+shitty hearing
+
+that poem was I think like
+the start of me starting to feel
+better about like who I was
+
+you know, if it inspires one person
+then it’s, then it’s gonna be worth it
+
+even though I couldn’t see
+past what was going on
+I kept going
+
+this is hard for me
+but my mother taught me
+to use my voice
+even when it shakes
+
+to be proud of who I am
+& to live unapologetically
+
+that journey is not linear
+
+& I know that words
+hold no volumes
+unless spoken with conviction
+
+when you share with people
+through art 
+it generates intimacy
+
+to see the profound effect
+that it has on someone
+five, ten, fifteen years later
+
+how much love 
+& commitment
+that we had 
+to this little community
+that we built
+that focused around like
+art & storytelling
+
+do you necessarily 
+have to, you know, 
+write a certain way
+to be able to be 
+considered literate?
+
+how can we learn in a world
+where only the young & 
+dumb are honest?
+
+so after I did my first poem
+on stage & 
+let it all out there
+that’s when I felt like
+yea, I got it
+
+I think like for me
+healing looked like
+being kinder to myself
+
+that’s when you get to know
+your students really intimately
+through their writing
+
+it will be the intro
+to the song we sing
+to the children
+
+even though I couldn’t see
+past what was going on
+I kept going
+
+this is hard for me
+but my mother taught me
+to use my voice
+even when it shakes
+
+to be proud of who I am
+& to live unapologetically
+
+that journey is not linear
+
+& I know that words
+hold no volumes
+unless spoken with conviction
+
+I was just like, wow we did something really incredible
+  </pre>
+</div>
+
 </div>
 
     <p>Content coming soon...</p>
