--- a/index.html
+++ b/index.html
@@ -8,96 +8,94 @@
 <body>
   <header>
     <a href="index.html">
-  <img src="media/images/banner.jpg" alt="Waveforms webtext banner" style="width:100%;">
-</a>
-   <nav>
-  <a href="index.html">
-    <img src="media/images/nav-intro.png" alt="Intro">
-  </a>
-
-  <div class="dropdown">
-    <span>
-      <img src="media/images/nav-theory.png" alt="Theoretical Conversations">
-    </span>
-    <div class="dropdown-content">
-      <a href="recife.html">Recife to Ferguson</a>
-      <a href="long-as-i-live.html">Long as I Live</a>
-    </div>
-  </div>
-
-  <div class="dropdown">
-    <span>
-      <img src="media/images/nav-methods.png" alt="Remixed Methods">
-    </span>
-    <div class="dropdown-content">
-      <a href="realm-of-entities.html">Realm of Entities</a>
-      <a href="poem-is-research.html">The Poem is the Research</a>
-    </div>
-  </div>
-
-  <div class="dropdown">
-    <span>
-      <img src="media/images/nav-praisesongs.png" alt="Praisesongs">
-    </span>
-    <div class="dropdown-content">
-      <a href="edsel-song.html">Edsel’s Song</a>
-      <a href="aaleah-song.html">Aaleah’s Song</a>
-      <a href="otto-song.html">Otto’s Song</a>
-      <a href="fatmata-song.html">Fatmata’s Song</a>
-    </div>
-  </div>
-
-  <a href="outro.html">
-    <img src="media/images/nav-outro.png" alt="Outro">
-  </a>
-
-  <a href="references.html">
-    <img src="media/images/nav-references.png" alt="References">
-  </a>
-
-  <a href="author.html">
-    <img src="media/images/nav-author.png" alt="Author">
-  </a>
-</nav>
-
+      <img src="media/images/banner.jpg" alt="Waveforms webtext banner" style="width:100%;">
+    </a>
+    <nav>
+      <a href="index.html">
+        <img src="media/images/nav-intro.png" alt="Intro">
+      </a>
+      <div class="dropdown">
+        <span><img src="media/images/nav-theory.png" alt="Theoretical Conversations"></span>
+        <div class="dropdown-content">
+          <a href="recife.html">Recife to Ferguson</a>
+          <a href="long-as-i-live.html">Long as I Live</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <span><img src="media/images/nav-methods.png" alt="Remixed Methods"></span>
+        <div class="dropdown-content">
+          <a href="realm-of-entities.html">Realm of Entities</a>
+          <a href="poem-is-research.html">The Poem is the Research</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <span><img src="media/images/nav-praisesongs.png" alt="Praisesongs"></span>
+        <div class="dropdown-content">
+          <a href="edsel-song.html">Edsel’s Song</a>
+          <a href="aaleah-song.html">Aaleah’s Song</a>
+          <a href="otto-song.html">Otto’s Song</a>
+          <a href="fatmata-song.html">Fatmata’s Song</a>
+        </div>
+      </div>
+      <a href="outro.html">
+        <img src="media/images/nav-outro.png" alt="Outro">
+      </a>
+      <a href="references.html">
+        <img src="media/images/nav-references.png" alt="References">
+      </a>
+      <a href="author.html">
+        <img src="media/images/nav-author.png" alt="Author">
+      </a>
+    </nav>
   </header>
   <main class="content-wrap">
-   <h1>Intro: Welcome to WAVEFORMS</h1>
-   <div class="audio-embed">
-    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
-    </iframe>
-  </div>
+    <h1>Intro: Welcome to WAVEFORMS</h1>
 
-<p class="transcript-link">
-  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html" target="_blank">Accessible Plain Text Transcript</a>
-</p>
+    <div class="audio-embed">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
+      </iframe>
+    </div>
 
-<div id="transcript-box" class="transcript-box" style="display: none;">
-  <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Intro: Words by Common</strong></p>
-  <p>we about to have<br>
-  an incredible experience</p>
+    <p class="transcript-link">
+      <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
+      <a href="intro-transcript.html" target="_blank">Accessible Plain Text Transcript</a>
+    </p>
 
-  <p>of art / love / poetry /<br>
-  emceeing / freedom / expression</p>
+    <div id="transcript-box" class="transcript-box" style="display: none;">
+      <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
+      <div class="transcript-scroll">
+        <p><strong>Intro: Words by Common</strong></p>
+        <p>we about to have<br>
+        an incredible experience</p>
+        <p>of art / love / poetry /<br>
+        emceeing / freedom / expression</p>
+        <p>Are y’all ready?<br>
+        I said, are y’all ready?</p>
+      </div>
+    </div>
 
-  <p>Are y’all ready?<br>
-  I said, are y’all ready?</p>
-</div>
+    <p><strong>Waveforms</strong> is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
 
-  </div>
- 
-  <p>Waveforms is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
+    <p>This webtext mixtape is adapted from my dissertation study on <strong>Hip Hop</strong> and spoken word poetry in K–12 classrooms. It features sounds that hold deep personal meaning, including the voices of four student-poets who are now young adults. Together we “sample” personal and educational experiences while reflecting on the Hip Hop and spoken word learning community that we co-constructed when I was their high school English teacher. In this study, we re-membered those experiences as we explored the youth poetry slam through sound. Together we show how youth-centered art spaces can help us read and write the word and the world (Freire &amp; Macedo, 1987), re-member the past (Dillard, 2008; 2011), and imagine new ways of becoming in a world that is not yet (Greene, 1977).</p>
 
-</body>
+    <p>I come to this work as a poet, DJ, and beatmaker who attends to the complexities of sound. For me, sound is a way of knowing and composing. Sound work offers methods of unflattening (Sousanis, 2015) traditional research and in this study includes the intentional uses of spoken language, field recordings, and musical samples. Sonic compositions require embodied sensibilities in which rhythms, loops, frequencies, and fragments of sound are remixed into new configurations. All of the music and poetry in this webtext are original. I produced the album using a digital audio workstation (DAW) called Ableton Live (see Figure 1).</p>
 
-</main>
+    <figure>
+      <img src="media/images/figure1.jpg" alt="Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process." style="max-width: 100%; height: auto;">
+      <figcaption>Figure 1: Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.</figcaption>
+    </figure>
+
+    <p>The title <strong>WAVEFORMS</strong> refers to the visual representation of sound (see Figure 2), symbolized by the lines you see when working inside a DAW like Ableton Live. These lines represent amplitude over time, revealing the loudness, rhythm, and dynamics of a recording. Every voice in this project—every laugh, breath, pause, or verse—was recorded as a waveform.</p>
+
+    <figure>
+      <img src="media/images/figure2.jpg" alt="Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention." style="max-width: 100%; height: auto;">
+      <figcaption>Figure 2: Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention.</figcaption>
+    </figure>
+  </main>
 
   <footer>
     <p>&copy; 2025 Brian Mooney</p>
   </footer>
-  
+</body>
 </html>
