--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <p>I come to this work as a poet, DJ, and beatmaker who attends to the complexities of sound. For me, sound is a way of knowing and composing. Sound work offers methods of unflattening (Sousanis, 2015) traditional research and in this study includes the intentional uses of spoken language, field recordings, and musical samples. Sonic compositions require embodied sensibilities in which rhythms, loops, frequencies, and fragments of sound are remixed into new configurations. All of the music and poetry in this webtext are original. I produced the album using a digital audio workstation (DAW) called Ableton Live (see Figure 1).</p>
 
-    <<figure>
+    <figure>
   <img src="media/images/figure1.png" alt="Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.">
   <figcaption>Figure 1: Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.</figcaption>
 </figure>
