--- a/praisesongs.html
+++ b/praisesongs.html
@@ -61,7 +61,7 @@
 </nav>
 
   </header>
-  <main>
+  <main class="content-wrap">
     <h1>Praisesongs</h1>
     <p>Content coming soon...</p>
   </main>
