--- a/theory.html
+++ b/theory.html
@@ -61,7 +61,7 @@
 </nav>
 
   </header>
-  <main>
+  <main class="content-wrap">
     <h1>Theoretical Conversations</h1>
     <h2>Recife to Ferguson</h2>
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
