--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@ Some Guidance on How to Read, Listen & Engage
 
 Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below. 
 
+<div class="audio-embed">
+  <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2026819329&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+  </iframe>
+</div>
+
   </main>
 
   <footer>
