--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="media/images/banner.jpg" alt="Waveforms webtext banner" style="width:100%;">
+      <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
     </a>
     <nav>
       <a href="index.html">
