--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
 <p>These are the research questions that framed my dissertation study:</p>
 
-<p>1. What happens when young people narrativize their experiences for a poetry slam?</p>
-<p>2. How do we re-member the youth poetry slam? 
-<p>3. What kinds of critical Hip Hop literacies are practiced in the youth poetry slam?</p>
+<p class="indent">1. What happens when young people narrativize their experiences for a poetry slam?</p>
+<p class="indent">2. How do we re-member the youth poetry slam? 
+<p class="indent">3. What kinds of critical Hip Hop literacies are practiced in the youth poetry slam?</p>
 
 <p>One significant question I asked participants during semi-structured interviews was “<strong>what do these experiences <em>sound</em> like to you?</strong>” This question became an invitation into multimodal meaning-making through collaborative composition, sonic memory work, and critical reflection.</p>
 
