--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
   </header>
   <main class="content-wrap">
-    <h1>Intro: Welcome to WAVEFORMS</h1>
+    <h1>Intro</h1>
 
     <div class="audio-embed">
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
@@ -74,6 +74,8 @@
         I said, are y’all ready?</p>
       </div>
     </div>
+
+    <p><strong>Welcome to WAVEFORMS</strong><p>
 
     <p>This webtext mixtape is adapted from my dissertation study on Hip Hop and spoken word poetry in K–12 classrooms. It features sounds that hold deep personal meaning, including the voices of four student-poets who are now young adults. Together we “sample” personal and educational experiences while reflecting on the Hip Hop and spoken word learning community that we co-constructed when I was their high school English teacher. In this study, we re-membered those experiences as we explored the youth poetry slam through sound. Together we show how youth-centered art spaces can help us read and write the <em>word</em> and the <em>world</em> (Freire &amp; Macedo, 1987), re-member the past (Dillard, 2008; 2011), and imagine new ways of <em>becoming</em> in a world that is not yet (Greene, 1977).</p>
 
