--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <p>These are the research questions that framed my dissertation study:</p>
 
 <p class="indent">1. What happens when young people narrativize their experiences for a poetry slam?</p>
-<p class="indent">2. How do we re-member the youth poetry slam? 
+<p class="indent">2. How do we re-member the youth poetry slam?</p> 
 <p class="indent">3. What kinds of critical Hip Hop literacies are practiced in the youth poetry slam?</p>
 
 <p>One significant question I asked participants during semi-structured interviews was “<strong>what do these experiences <em>sound</em> like to you?</strong>” This question became an invitation into multimodal meaning-making through collaborative composition, sonic memory work, and critical reflection.</p>
@@ -120,8 +120,7 @@
 <p><strong>Some Guidance on How to Read, Listen & Engage</strong></p>
 
 <p>Some pages include one track, while others provide a dropdown menu for multiple tracks within that category. You can read the transcribed lyrics as you listen by clicking on 
-<span style="color: #431a50;">Show Transcript</span>. This triggers a scrollable text box with lyrics embedded on the page. This is ideal for reading along while you listen. 
-Alternatively, you can click on <strong><span style="color: #431a50;">Accessible Plain Text Transcript</span></strong>, which opens a new page with text only. As you listen, you can scroll or rewind. You can pause. You can move within, between, and through. There is no single linear path through the webtext—no prescriptive order that dictates how you engage with the compositions.  In this way, the webtext acknowledges a turn from linearity to modularity. WAVEFORMS is a digital exhibit that you are invited to curate as a participant-visitor to this site.</p>  
+ <strong><span style="color: #431a50;">Show Transcript</span></strong>. This triggers a scrollable text box with lyrics embedded on the page. This is ideal for reading along while you listen. Alternatively, you can click on <strong><span style="color: #431a50;">Accessible Plain Text Transcript</span></strong>, which opens a new page with text only. As you listen, you can scroll or rewind. You can pause. You can move within, between, and through. There is no single linear path through the webtext—no prescriptive order that dictates how you engage with the compositions.  In this way, the webtext acknowledges a turn from linearity to modularity. WAVEFORMS is a digital exhibit that you are invited to curate as a participant-visitor to this site.</p>  
 
 <p><em>Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below.</em></p> 
 
