--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -247,6 +247,12 @@ spiritual space
 </div>
 
     <p>Coming soon: Content for this page will explore Aaleah’s voice, story, and sonic contribution to the Waveforms project.</p>
+  
+  <div class="track-nav">
+  <a href="edsel-song.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="otto-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+</div>
+    
   </main>
 
   <footer>
