--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -168,6 +168,12 @@ undress for anyone other than itself
 </div>
 
     <p>Coming soon: Content for this page will explore how poetic form and method function as research in waveform pedagogy.</p>
+  
+  <div class="track-nav">
+  <a href="realm-of-entities.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="edsel-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+</div>
+    
   </main>
 
    <footer>
